--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
         <title>Contact List App</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="theme.css" />
-        <link rel="stylesheet" href= 
-"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
-        <script src="app.js"></script>
+        <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
     </head>
     
     <body>    
